# template-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README_main.md  pyproject.toml  requirements.txt  template_setup.py
.github/: CODEOWNERS  auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-assign-issue.yml  auto-assign.yml  quality.yml  tests.yml
config/: config.yaml  example_config.yaml
src/template/: __init__.py  __main__.py  cli.py
src/template_python/: __init__.py  __main__.py  cli.py  config.py  config_parser.py  constant.py  path.py  utils.py
tests/: cli_test.py  config_parser_test.py  conftest.py  path_test.py  utils_test.py
