[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.2",
]
workflow = [
    "pre-commit>=3.2.1",
    "pdm>=2.4.9",
]

[project]
name = "template-python"
version = "0.1.0"
description = ""
authors = [
    {name = "oedokumaci", email = "oral.ersoy.dokumaci@gmail.com"},
]
dependencies = [
    "typer>=0.7.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
