[project]
name = "template-python"
version = "0.1.0"
description = ""
authors = [
    {name = "oedokumaci", email = "oral.ersoy.dokumaci@gmail.com"},
]
dependencies = [
    "pdm>=2.5.3",
    "typer>=0.7.0",
    "pyyaml>=6.0",
    "pydantic>=1.10.7",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.13"
readme = "README_main.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
test = [
    "pytest>=7.3.1",
    "ipykernel",
]
workflow = [
    "pre-commit>=3.2.2",
    "ipykernel>=6.29.5",
]
